@@ -1,2 +1,3 @@
 #+TITLE: News
 
+- [[file:freedom-of-information.org][Freedom of Information Series]] - November 27, 2023
